--- a/views/articlePage.ejs
+++ b/views/articlePage.ejs
@@ -29,6 +29,10 @@
 
         <% }) %>
 
+
+
+        
+
                    
 
                     
@@ -37,7 +41,8 @@
        
     </main>
     
-    <!--<script src="/js/script.js"></script>-->
+    
+    <script src="/js/script.js"></script>
     <%- include("partials/footer.ejs") %>
 
 </body>
