--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,5 +12,6 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/articleOne.css">
+    <link rel="stylesheet" href="/css/articlePage.css">
     <title>main</title>
 </head>
