--- a/views/categoryOne.ejs
+++ b/views/categoryOne.ejs
@@ -27,15 +27,24 @@
                     <a href="/article/<%= article.slug %>">Ver mais</a>
                 </div>
             </div>
+
+            <div class="pagination">
+                <a href="/category/<%= slug %>/<%= count_articles %>" class="next">Next</a>
+            </div>
         <% }) %>
 
-                   
+        <button class="load-more">Carregar mais</button>
+        <div class="no-more">Sem mais artigos :(</div>
 
                     
         <!--Termina Itens-->
     </div>
        
     </main>
+
+    <script src="https://unpkg.com/@webcreate/infinite-ajax-scroll/dist/infinite-ajax-scroll.min.js"></script>
+
+    <script src="/js/infinitescroll2.js" ></script>
     
 
     <%- include("partials/footer.ejs") %>
