--- a/public/css/index.css
+++ b/public/css/index.css
@@ -84,3 +84,28 @@
         height: calc(100vw /2);
     }
 }
+
+
+
+.load-more {
+    display: inline-block;
+    height: 32px;
+    width: 100%;
+    padding: 0 16px;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    opacity: 0;
+    font-family: Lucida Grande,Lucida Sans Unicode,Lucida Sans,Geneva,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 30px;
+    color: #555;
+    background-color: #fff;
+    cursor: pointer;
+    transition: opacity .4s;
+  }
+  
+  .load-more:hover {
+    color: #F63840;
+    border: solid 1px #F63840;
+  }
