--- a/views/articleOne.ejs
+++ b/views/articleOne.ejs
@@ -55,19 +55,19 @@
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
                     <div class="numbertext">1 / 3</div>
-                    <img class="slide__img" src="<%= exp_image_home %>" >
+                    <img class="slide__img" src="<%= exp_image_home %>"  loading="lazy">
                     <div class="text">Caption One</div>
                     </div>
                 
                     <div class="mySlides fade">
                     <div class="numbertext">2 / 3</div>
-                    <img class="slide__img" src="<%= exp_image_initial %>" >
+                    <img class="slide__img" src="<%= exp_image_initial %>"  loading="lazy">
                     <div class="text">Caption Two</div>
                     </div>
                 
                     <div class="mySlides fade">
                     <div class="numbertext">3 / 3</div>
-                    <img class="slide__img" src="<%= exp_image_done %>" >
+                    <img class="slide__img" src="<%= exp_image_done %>"  loading="lazy">
                     <div class="text">Caption Three</div>
                     </div>
                 
