--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,16 @@
                         </div>
                     </div>
 
+                    <div class="pagination">
+                        <a href="/articles/page/<%= count_articles %>" class="next">Next</a>
+                    </div>
+
+                   
+
+
         <% }) %>
+        <button class="load-more">Carregar mais</button>
+        <div class="no-more">Sem mais artigos :(</div>
 
                    
 
@@ -37,7 +46,8 @@
        
     </main>
     
-    <!--<script src="/js/script.js"></script>-->
+    <script src="https://unpkg.com/@webcreate/infinite-ajax-scroll/dist/infinite-ajax-scroll.min.js"></script>
+    <script src="/js/infinitescroll.js" ></script>
     <%- include("partials/footer.ejs") %>
 
 </body>
