terminando base da listagem de categorias para o admin usando ajax

--- a/views/partials/navbarAdmin.ejs
+++ b/views/partials/navbarAdmin.ejs
@@ -8,14 +8,14 @@
 
     <h2>CATEGORIA: ASSUNTOS</h2>
     <button class="tablinks"><a href="/admin/dashboard/categories/new">Criar categoria</a></button>
-    <button class="tablinks"><a href="/admin/dashboard/categories">Lista de categorias</a></button>
+    <button class="tablinks"><a href="/admin/dashboard/categories/1">Lista de categorias</a></button>
 
     <h2>CATEGORIA: BNCC</h2>
     <button class="tablinks"><a href="/admin/dashboard/categories2/new">Criar categoria</a></button>
-    <button class="tablinks"><a href="/admin/dashboard/categories2">Lista de categorias</a></button>
+    <button class="tablinks"><a href="/admin/dashboard/categories2/1">Lista de categorias</a></button>
 
     <h2>USUÁRIOS</h2>
-    <button class="tablinks"><a href="/admin/dashboard/users">Lista de usuários</a></button>
-    <button class="tablinks"><a href="/admin/dashboard/users/deleted">Lista de usuários deletados</a></button>
+    <button class="tablinks"><a href="/admin/dashboard/users/1">Lista de usuários</a></button>
+    <button class="tablinks"><a href="/admin/dashboard/users/deleted/1">Lista de usuários deletados</a></button>
 
 </div>
