--- a/views/usersList.ejs
+++ b/views/usersList.ejs
@@ -37,21 +37,24 @@
                                     </form>
                                 </td>
     
-
+                                <div class="pagination">
+                                    <a href="/admin/dashboard/users/<%= count_articles %>" class="next">Next</a>
+                                </div>
                                 
                             </tr>
                         </tbody>
                         <% }) %>
 
                     </table>
+                    <button class="load-more">Carregar mais</button>
+                    <div class="no-more">Sem mais artigos :(</div>
 
             </div>
 
-
-
     </main>
     
-
+    <script src="https://unpkg.com/@webcreate/infinite-ajax-scroll/dist/infinite-ajax-scroll.min.js"></script>
+    <script src="/js/infinitescrollAdmin.js" ></script>
     <%- include("partials/footer.ejs") %>
 
 </body>
