--- a/views/articlesNewSubadmin.ejs
+++ b/views/articlesNewSubadmin.ejs
@@ -14,7 +14,7 @@
                 <h1 class="title__header">Criar novo artigo</h1>
             </div>
 
-            <form action="/subadmin/dashboard/articles/new" method="POST">
+            <form action="/subadmin/dashboard/new/article" method="POST">
                 <fieldset>
 
                     <legend>Tela inicial</legend>
@@ -72,27 +72,19 @@
 
                     <fieldset>
                         <legend>Categorias</legend>
-                        <label for="category">Assunto</label>
-                        <select name="category" required>
+                        <label for="category1">Assunto</label>
+                        <select name="category1" required>
                             <option value="" disabled selected>Escolha uma opção</option>
-                            <% categories.forEach((category) => {  %>
-                                <option value="<%= category.id %>"><%= category.title %></option>
+                            <% categories1.forEach((category1) => {  %>
+                                <option value="<%= category1.id %>"><%= category1.title %></option>
                             <% }) %>
                         </select>
 
-                        <label for="category2">Preço</label>
+                        <label for="category2">BNCC</label>
                         <select name="category2" required>
                             <option value="" disabled selected>Escolha uma opção</option>
                             <% categories2.forEach((category2) => {  %>
                                 <option value="<%= category2.id %>"><%= category2.title %></option>
-                            <% }) %>
-                        </select>
-
-                        <label for="category3">BNCC</label>
-                        <select name="category3" required>
-                            <option value="" disabled selected>Escolha uma opção</option>
-                            <% categories3.forEach((category3) => {  %>
-                                <option value="<%= category3.id %>"><%= category3.title %></option>
                             <% }) %>
                         </select>
                     </fieldset>
