--- a/views/categoriesList.ejs
+++ b/views/categoriesList.ejs
@@ -44,7 +44,7 @@
 
                 </table>
                 <button class="load-more">Carregar mais</button>
-                <div class="no-more">Sem mais artigos :(</div>
+                <div class="no-more">Sem mais categorias :(</div>
 
 
         </div>
