--- a/views/partials/headerAlternativo.ejs
+++ b/views/partials/headerAlternativo.ejs
@@ -6,9 +6,9 @@
                 <ul>
                     <li><img  class="menu__icon" src="/assets/burger-icon.svg" alt="Burger" onclick="myFunction()"></li>
                     <li><img class="menu__logo" src="/assets/logo.bmp" alt=""></li>
+                    <li><a href="/">Principal</a></li>
                 
                     <!--menu grande de teste-->
-
                     <div class="dropdown">
                         <li><button class="dropbtn">Por assunto</button></li>
 
@@ -59,7 +59,8 @@
                                 
                                 <div class="row">
                                     <div class="column">
-                                        <a href="#">Saiba mais e entre em contato</a>  
+                                        <a href="#">Saiba mais</a>  
+                                        <a href="#">Entre em contato</a>  
                                     </div>
                                     
                                 </div>
