--- a/views/usersList.ejs
+++ b/views/usersList.ejs
@@ -29,7 +29,19 @@
                                 <td><img class="img-users" src="/assets/male-user-shadow-svgrepo-com.svg" alt=""></td>
                                 <td><%= user.name %></td>
                                 <td><%= user.email %></td>
-                                <td><%= user.provider %></td>
+
+                                <% if (user.provider === 0) { %>
+                                    <td>Usuário</td>
+                                <% } %>
+
+                                <% if (user.provider === 1) { %>
+                                    <td>Subadministrador</td>
+                                <% } %>
+
+                                <% if (user.provider === 2) { %>
+                                    <td>Administrador</td>
+                                <% } %>
+    
                                 <td>
                                     <a href="/admin/dashboard/users/edit/<%= user.id %>"><img class="img-users" src="/assets/pencil-striped.svg" alt=""></a>
                                     <form action="/admin/dashboard/users/soft/<%= user.id %>" method="post">
@@ -47,7 +59,7 @@
 
                     </table>
                     <button class="load-more">Carregar mais</button>
-                    <div class="no-more">Sem mais artigos :(</div>
+                    <div class="no-more">Sem mais usuários :(</div>
 
             </div>
 
