--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
     --color-text-base: black;
     --color-page-background: #ffffff;
     font-size: 70%;
-}
+    font-family: 'Poppins', sans-serif;}
 
 *{
     margin: 0;
@@ -18,8 +18,6 @@ html {
 
 body {
     background-color: var(--color-page-background);
-    font-weight: 500;
-    font-family: "open Sans", sans-serif;
     font-size: 1.8rem;
     color: var(--color-text-base);
     line-height: 1.5;
@@ -31,6 +29,8 @@ body {
     display: flex;
     align-items: baseline;
     justify-content: center;
+    padding-top: 2rem;
+    background-color: #f1f1f1;
     
 }
 
