atualizando header e view da página de um profile

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,5 +15,6 @@
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/articleOne.css">
     <link rel="stylesheet" href="/css/articlePage.css">
+    <link rel="stylesheet" href="/css/profileUser.css">
     <title>main</title>
 </head>
