--- a/views/user.ejs
+++ b/views/user.ejs
@@ -7,82 +7,93 @@
     <main class="content">
 
 
-        <div class="users__content">
+        <div class="profile__content">
 
             <div class="users__section__header">
-                <h1 class="title__header">Pagina de um usuários</h1>
-            </div>
-
-            <div class="user__block">
-                <div class="user__info">
-                    <h2 class="user__title">Nome</h2>
-                </div>
-                <div class="user__info">
-                    <p><%= name %></p>
-                </div>
+                <h1 class="title__header">Perfil</h1>
             </div>
 
             <div class="users__section__body">
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">foto</h2>
-                    </div>
-                    <div class="user__info">
-                        <div class="article__round-container">
-                            <%if(photo === null){%>
-                                <img src="/assets/male-user-shadow-svgrepo-com.svg" alt="">
-                            <%}else{%>
-                                <img class="user__image" src="<%= photo %>" alt="">
-                            <%}%>
+
+                <div class="block__left">
+
+                    <div class="user__item">
+                        <div class="user__block">
+                            <div class="user__info">
+                                <h2 class="user__title">Nome</h2>
+                            </div>
+                            <div class="user__info">
+                                <p><%= name %></p>
+                            </div>
+                        </div>
+
+                        <div class="user__block">
+                            <div class="user__info">
+                                <h2 class="user__title">Descrição</h2>
+                            </div>
+                            <div class="user__info">
+                                <p><%= description %></p>
+                            </div>
+                        </div>
+    
+                        <div class="user__block">
+                            <div class="user__info">
+                                <h2 class="user__title">Cargo</h2>
+                            </div>
+        
+                            <% if (provider === 0) { %>
+                                <div class="user__info">
+                                    <p>Usuário</p>
+                                </div>
+                            <% } %>
+        
+                            <% if (provider === 1) { %>
+                                <div class="user__info">
+                                    <p>Subadministrador</p>
+                                </div>
+                            <% } %>
+        
+                            <% if (provider === 2) { %>
+                                <div class="user__info">
+                                    <p>Administrador</p>
+                                </div>
+                            <% } %>
+                           
+                        </div>
+    
+                        <div class="user__block">
+                            <div class="user__info">
+                                <h2 class="user__title">Usuário desde:</h2>
+                            </div>
+                            <div class="user__info">
+                                <p><%= created %></p>
+                            </div>
                         </div>
                     </div>
+
                 </div>
 
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">Cargo</h2>
-                    </div>
+                <div class="block__right">
 
-                    <% if (provider === 0) { %>
+                    <div class="user__item">
+
+                    <div class="user__block">
+                        
                         <div class="user__info">
-                            <p>Usuário</p>
+                            <div class="profile__round__container">
+                                <%if(photo === null){%>
+                                    <img class="profile__image" src="/assets/male-user-shadow-svgrepo-com.svg" alt="">
+                                <%}else{%>
+                                    <img class="profile__image" src="<%= photo %>" alt="">
+                                <%}%>
+                            </div>
                         </div>
-                    <% } %>
+                    </div>
 
-                    <% if (provider === 1) { %>
-                        <div class="user__info">
-                            <p>Subadministrador</p>
-                        </div>
-                    <% } %>
-
-                    <% if (provider === 2) { %>
-                        <div class="user__info">
-                            <p>Administrador</p>
-                        </div>
-                    <% } %>
-                   
                 </div>
 
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">Descrição</h2>
-                    </div>
-                    <div class="user__info">
-                        <p><%= description %></p>
-                    </div>
-                </div>
-
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">Usuário desde:</h2>
-                    </div>
-                    <div class="user__info">
-                        <p><%= created %></p>
-                    </div>
-                </div>
+            </div>
                 
-                
-                          
             </div>
 
         </div>
